// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swift Language makes class 1`] = `
"class MyService: ExampleApiService {

    func fetchData() {
        print("Hey!")
    }

}"
`;

exports[`Swift Language makes file 1`] = `
"// Sample.swift

import Foundation
import UIKit

open class Sample {

    func findStuff() {
        print("Hey!")
    }

    public static func getStuff() async throws -> Int {
        print("Hey!")
    }

}"
`;

exports[`Swift Language makes file header 1`] = `"This is the header to a file"`;

exports[`Swift Language makes function 1`] = `
"fileprivate static func makePerson(name: String, age: Int = 33) async throws {
    print("Hey!")
}"
`;

exports[`Swift Language makes import 1`] = `"import ExamplePackage"`;

exports[`Swift Language makes struct 1`] = `
"internal struct Sample: Codable {
    print("Hey")
}
"
`;

exports[`Swift Language makes type 1`] = `
"open struct ExampleObject: Codable, NSObject {

    func fetchData() {
        print("Hey!")
    }

}"
`;
